[+] stock app for the first challenge
* Will not compile; includes placeholders
* Upgraded a few dependencies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,32 +1,8 @@
 <resources>
-    <string name="app_name">Two Trees Olive Oil</string>
-    <string name="description_text">
-        Through each generation we’ve adapted and evolved, always keeping our sights set on creating
-        the highest quality olive oil, while balancing our time-honored traditions with new
-        innovative techniques.\n\n
-        We’re passionate, even obsessive, about environmental sustainability,
-        and we’re constantly looking to find ways to decrease our footprint on mother earth.\n\n
-        We also share a strong sense of community with our customers, fellow farmers, and our beloved Santa
-        Rosa neighbors who have embraced our business for many decades. Our high ethical standards
-        and well-defined values are central to everything we do.
-    </string>
-    <string name="enter_label">Enter</string>
-    <string name="home_label">Home</string>
-    <string name="tours_label">Tours</string>
-    <string name="shop_label">Shop</string>
-    <string name="tours_header_label">TOURS</string>
-    <string name="tours_content">Imagine your special event hosted against the sun-drenched
-        backdrop of a 35-acre olive orchard in the beautiful rolling hills of Northern California.
-        Wake up to songbirds flittering about the lush grounds of our 20-room bed and breakfast, and
-        feast on mouth-watering breakfasts made from local, organic ingredients. We’re expert hosts
-        who’ve thrown some monumental parties and hosted a wide range of events from anniversaries,
-        to charity events, to weddings, and much more.
-    </string>
-    <string name="shop_header_label">Your cart</string>
-    <string name="shop_button_label">Continue Shopping</string>
-    <string name="cart_content">Don’t forget about using the coupon codes you’ll
-        find around our website. They change frequently, but are always a great bargain… if we
-        do say so ourselves. If you have any questions, don’t hesitate to reach out. We love
-        helping our customers.
-    </string>
+    <string name="app_name">Show Me the Data!</string>
+    <string name="choose_stock_label">Choose your stock below</string>
+    <string name="firm_1_btn_label">IRMN</string>
+    <string name="firm_2_btn_label">BTMN</string>
+    <string name="firm_3_btn_label">ZMBI</string>
+    <string name="stock_info">Open: %.2f\n\nClose: %.2f\n\nChange: (%.2f)</string>
 </resources>
