[+] Cleaned up to prep for use of a web service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
         who’ve thrown some monumental parties and hosted a wide range of events from anniversaries,
         to charity events, to weddings, and much more.
     </string>
-    <string name="shop_header_label">Your cart</string>
+    <string name="shop_header_label">Our products</string>
     <string name="shop_button_label">Continue Shopping</string>
     <string name="cart_content">Don’t forget about using the coupon codes you’ll
         find around our website. They change frequently, but are always a great bargain… if we
