--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
         do say so ourselves. If you have any questions, don’t hesitate to reach out. We love
         helping our customers.
     </string>
+    <string name="bottle_image">Image of the olive oil bottle</string>
+    <string name="product_size_label">%d ml bottle</string>
 </resources>
