[+] Created a detail fragment to display a specific product

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     </string>
     <string name="bottle_image">Image of the olive oil bottle</string>
     <string name="product_size_label">%d ml bottle</string>
+    <string name="product_image_label">Bottle of olive oil</string>
+    <string name="add_to_cart_label">Add to Cart</string>
 </resources>
